# tucano

./: .editorconfig  .env.example  .gitignore  ARCHITECTURE.md  B3_INTEGRATION.md  B3_MODULAR_ARCHITECTURE.md  BINANCE_IMPLEMENTATION_SUMMARY.md  CHANGELOG.md  CONTRIBUTING.md  CREDITS.md  Cargo.toml  DISCLAIMER.md  DOCUMENTATION.md  DOCUMENTATION.md.backup  EXCHANGE_MODULES_COMPARISON.md  HYBRID_ARCHITECTURE_PROPOSAL.md  LICENSE  PROFIT_DLL_IMPLEMENTATION_ANALYSIS.md  PROFIT_DLL_INTEGRATION_SUMMARY.md  PROFIT_DLL_WINDOWS_SETUP.md  README.md  TOUCAN_WEBSOCKET_SEPARATION_GUIDE.md  cargo-deny.toml  deny.toml  fix_markdown.py  rustfmt.toml  test_data_simple  test_data_simple.rs  test_simple_b3  toucan.md
analytics/: Cargo.toml  README.md
analytics/src/: algorithm.rs  lib.rs  time.rs
brokers/: Cargo.toml  README.md
brokers/src/: lib.rs  load.rs  model.rs  registry.rs
core/: Cargo.toml  README.md
core/examples/: backtests_concurrent.rs  engine_async_with_historic_market_data_and_mock_execution.rs  engine_sync_with_audit_replica_engine_state.rs  engine_sync_with_live_market_data_and_mock_execution_and_audit.rs  engine_sync_with_multiple_strategies.rs  engine_sync_with_risk_manager_open_order_checks.rs  statistical_trading_summary.rs
core/src/: error.rs  lib.rs  logging.rs  shutdown.rs
core/tests/: test_engine_process_engine_event_with_audit.rs
data/: Cargo.toml  README.md
data/examples/: dynamic_multi_stream_multi_exchange.rs  indexed_market_stream.rs  multi_stream_multi_exchange.rs  order_books_l1_streams.rs  order_books_l1_streams_multi_exchange.rs  order_books_l2_manager.rs  order_books_l2_streams.rs  public_trades_streams.rs  public_trades_streams_multi_exchange.rs
data/src/: b3_hybrid_test.rs  compat.rs  error.rs  event.rs  instrument.rs  lib.rs
examples/: Cargo.toml  EXAMPLES_GUIDE.md  README.md  b3_client_example.rs  b3_modular_example.rs  b3_profit_dll_integration.rs  backtests_concurrent.rs  basic_b3_usage.rs  engine_async_with_historic_market_data_and_mock_execution.rs  engine_sync_with_audit_replica_engine_state.rs  engine_sync_with_live_market_data_and_mock_execution_and_audit.rs  hybrid_test.rs  multi_stream_multi_exchange.rs  order_books_l2_manager.rs  profit_dll_b3_integration.rs  profit_dll_windows_config.rs  public_trades_streams.rs  simple_btc_streaming.rs  simple_trading_strategy.rs  validate_b3_execution.rs
examples/archived/: b3_profit_dll_integration.rs  hybrid_test.rs  simple_trading_strategy.rs  validate_b3_execution.rs
examples/binance-data-stream/: Cargo.toml  README.md
examples/complete/: simple_btc_paper_trading.rs
examples/core/: backtests_concurrent.rs  engine_async_with_historic_market_data_and_mock_execution.rs  engine_sync_with_audit_replica_engine_state.rs  engine_sync_with_multiple_strategies.rs  engine_sync_with_risk_manager_open_order_checks.rs
examples/integration/: signed_get_request.rs  simple_websocket_integration.rs
examples/live/: example_1.sh  example_1_live_login.rs  example_2_get_history_trades.rs  live_login_single_ticker.rs  minimal.rs
examples/mock/: minimal.rs
examples/ratatui-data-stream/: Cargo.toml
examples/src/: credentials.rs  example_1_live_login.rs  example_2_get_history_trades.rs  main.rs  mock_minimal.rs
execution/: Cargo.toml  README.md
execution/benches/: dll_performance.rs
execution/examples/: binance_client_example.rs
execution/src/: balance.rs  compat.rs  error.rs  indexer.rs  lib.rs  map.rs  trade.rs
integration/: Cargo.toml  README.md
integration/examples/: signed_get_request.rs
integration/src/: channel.rs  de.rs  error.rs  lib.rs  metric.rs  snapshot.rs  subscription.rs
macros/: Cargo.toml
macros/src/: lib.rs
markets/: Cargo.toml  README.md  build.rs
markets/src/: asset.rs  asset_simplified.rs  b3.rs  exchange.rs  hybrid_tests.rs  instrument.rs  lib.rs  lib_new.rs  profit_dll.rs  profit_dll_complete.rs  side.rs
profit-dll/: Cargo.toml  README.md
profit-dll/examples/: basic_usage.rs  basic_usage_colored.html  basic_usage_test.rs  minimal_test.rs  trading_strategy.rs
profit-dll/lib/: README.md
profit-dll/src/: callbacks.rs  connector.rs  error.rs  lib.rs  types.rs  utils.rs
profitdll/: Cargo.toml  EXPORT_STATUS.md  MANUAL.md  README.md
profitdll/src/: api.rs  error.rs  ffi.rs  ffi_types.rs  lib.rs  mock.rs
profitdll/tests/: error_mapping.rs  mock_events.rs  mock_extended.rs  mock_history.rs  send_order_stub.rs  windows_basic.rs
risk/: Cargo.toml  README.md
risk/src/: lib.rs
strategies/: Cargo.toml  README.md
strategies/src/: lib.rs  mean_reversion.rs  microstructure.rs  momentum.rs  options.rs  order_book_imbalance.rs  shared.rs
strategy/: Cargo.toml  README.md
strategy/src/: algo.rs  close_positions.rs  default.rs  lib.rs  mod.rs  on_disconnect.rs
toucan/: Cargo.toml  LICENSE  README.md
toucan-instrument/: Cargo.toml  README.md
toucan-instrument/src/: lib.rs
toucan-macro/: Cargo.toml  LICENSE  README.md
toucan-strategy/: Cargo.toml
toucan-strategy/src/: algo.rs  close_positions.rs  default.rs  lib.rs  mod.rs  on_disconnect.rs  on_trading_disabled.rs
toucan/examples/: backtests_concurrent.rs  engine_async_with_historic_market_data_and_mock_execution.rs  engine_sync_with_audit_replica_engine_state.rs  engine_sync_with_live_market_data_and_mock_execution_and_audit.rs  engine_sync_with_multiple_strategies.rs  engine_sync_with_risk_manager_open_order_checks.rs  statistical_trading_summary.rs
toucan/src/: lib.rs  logging.rs
toucan/tests/: test_engine_process_engine_event_with_audit.rs
trader/: Cargo.toml  README.md
trader/src/: algo.rs  close_positions.rs  lib.rs  on_disconnect.rs  on_trading_disabled.rs  side.rs
tucano/: Cargo.toml
tucano-profitdll/: Cargo.toml  MANUAL.md  MANUAL_ORIGINAL_LINEAR.md  README.md  profitdll.docx
tucano-profitdll/src/: error.rs  ffi.rs  lib.rs  mock.rs
tucano-profitdll/tests/: error_mapping.rs  send_order_stub.rs  windows_basic.rs
tucano/src/: lib.rs
xtask/: CHANGELOG.md  Cargo.toml  README.md
xtask/scripts/: verify_disclaimers.sh
xtask/src/: app.rs  commands.rs  macros.rs  (+3 more)
(+466 files in other folders)
