[package]
name = "tucano-analytics"
version = "0.1.0"
edition = "2021"
license = "MIT"

[package.metadata.docs.rs]
all-features = true
repository = "https://github.com/brbtavares/tucano"
description = "Métricas e summaries (drawdown, Sharpe, TearSheet) para o ecossistema Tucano"
keywords = ["trading","analytics","metrics","finance"]
categories = ["finance","algorithms"]

[dependencies]
serde = { version = "1", features = ["derive"] }
rust_decimal = { version = "1", features = ["serde"] }
derive_more = { version = "1", features = ["constructor", "display", "from"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
indexmap = { version = "2.0", features = ["serde"] }
fnv = "1.0"
uuid = { version = "1.0", features = ["serde"] }
smol_str = { workspace = true }
prettytable = "0.10"
"tucano-execution" = { workspace = true }
"tucano-markets" = { workspace = true }
"tucano-integration" = { workspace = true }
rust_decimal_macros = { version = "1" }
