[package]
name = "tucano-analytics"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/brbtavares/tucano"
readme = "README.md"
documentation = "https://docs.rs/tucano-analytics"
description = "Metrics, statistics, and summaries (drawdown, Sharpe, TearSheet) for the Tucano ecosystem"
keywords = ["trading","analytics","metrics","finance"]
categories = ["finance","algorithms"]

[dependencies]
serde = { version = "1", features = ["derive"] }
rust_decimal = { version = "1", features = ["serde"] }
derive_more = { version = "2", features = ["constructor", "display", "from"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
indexmap = { version = "2.0", features = ["serde"] }
fnv = "1.0"
uuid = { version = "1.0", features = ["serde"] }
smol_str = { workspace = true }
prettytable = "0.10"
"tucano-execution" = { workspace = true }
"tucano-markets" = { workspace = true }
"tucano-integration" = { workspace = true }
rust_decimal_macros = { version = "1" }
