[package]
name = "toucan-analytics"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/brbtavares/toucan"
readme = "README.md"
documentation = "https://docs.rs/toucan-analytics"
description = "Metrics, statistics, and summaries (drawdown, Sharpe, TearSheet) for the Toucan ecosystem"
keywords = ["trading","analytics","metrics","finance"]
categories = ["finance","algorithms"]

[dependencies]
serde = { version = "1", features = ["derive"] }
rust_decimal = { version = "1", features = ["serde"] }
derive_more = { version = "1", features = ["constructor", "display", "from"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
indexmap = { version = "2.0", features = ["serde"] }
fnv = "1.0"
uuid = { version = "1.0", features = ["serde"] }
smol_str = { workspace = true }
prettytable = "0.10"
"toucan-execution" = { workspace = true }
"toucan-integration" = { workspace = true }
rust_decimal_macros = { version = "1" }
