[package]
name = "tucano-brokers"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/brbtavares/tucano"
readme = "README.md"
documentation = "https://docs.rs/tucano-brokers"
description = "Abstrações de broker: identificação, custos, metadados de certificação"
keywords = ["trading","broker","costs","fees"]
categories = ["finance","api-bindings"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, optional = true }
rust_decimal = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
indexmap = { workspace = true, features = ["serde"] }
fnv = { workspace = true }
thiserror = { workspace = true }
strum = { version = "0.27", features = ["derive"] }

[features]
json = ["serde_json"]

[dev-dependencies]
rust_decimal_macros = { workspace = true }
