[package]
name = "tucano-core"
version = "0.12.2"
edition = "2021"
authors = ["JustAStream <justastream.code@gmail.com>"]
repository = "https://github.com/brbtavares/tucano"
readme = "README.md"
description = "Framework for building high-performance live-trading, paper-trading and back-testing systems"
keywords = ["trading", "backtesting", "crypto", "stocks", "investment"]
categories = ["finance", "algorithms"]
license = "MIT"

[dev-dependencies]
rust_decimal_macros = { workspace = true }
spin_sleep = { workspace = true }
tokio = { workspace = true, features = ["fs"]}

[dependencies]
"tucano-analytics" = { workspace = true }
"tucano-risk" = { workspace = true }
# Tucano Ecosystem
"tucano-integration" = "0.9.1"
"tucano-markets" = "0.3.1"
"tucano-data" = "0.10.1"
"tucano-execution" = "0.5.3"
"tucano-trader" = "0.1.0"

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json", "registry"]}

# Async
tokio = { workspace = true, features = ["sync"] }
futures = { workspace = true }
pin-project = { workspace = true }

# Error
thiserror = { workspace = true }

# SerDe
serde = { workspace = true, features = ["derive"] }

# Data Structures
smol_str = { workspace = true }
rust_decimal = { workspace = true }
fnv = { workspace = true }
indexmap = { workspace = true, features = ["serde"]}

# Misc
chrono = { workspace = true, features = ["serde"]}
derive_more = { workspace = true, features = ["constructor", "from", "display"]}
prettytable-rs = "0.10.0"
itertools = { workspace = true }
parking_lot = { workspace = true }

