[package]
name = "tucano-core"
version = "0.1.2"
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/brbtavares/tucano"
readme = "README.md"
documentation = "https://docs.rs/tucano-core"
description = "Núcleo de engine: backtesting, live trading, orchestration e estado"
keywords = ["trading","engine","backtesting","live","orchestration"]
categories = ["finance","algorithms"]

[dev-dependencies]
rust_decimal_macros = { workspace = true }
spin_sleep = { workspace = true }
tokio = { workspace = true, features = ["fs"]}

[dependencies]
"tucano-analytics" = { workspace = true }
"tucano-risk" = { workspace = true }
# Tucano Ecosystem
"tucano-integration" = { workspace = true }
"tucano-markets" = { workspace = true }
"tucano-data" = { workspace = true }
"tucano-execution" = { workspace = true }
"tucano-trader" = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json", "registry"]}

# Async
tokio = { workspace = true, features = ["sync"] }
futures = { workspace = true }
pin-project = { workspace = true }

# Error
thiserror = { workspace = true }

# SerDe
serde = { workspace = true, features = ["derive"] }

# Data Structures
smol_str = { workspace = true }
rust_decimal = { workspace = true }
fnv = { workspace = true }
indexmap = { workspace = true, features = ["serde"]}

# Misc
chrono = { workspace = true, features = ["serde"]}
derive_more = { workspace = true, features = ["constructor", "from", "display"]}
prettytable-rs = "0.10.0"
itertools = { workspace = true }
parking_lot = { workspace = true }

