[package]
name = "tucano-data"
version = "0.10.1"
edition = "2021"
authors = ["JustAStream <justastream.code@gmail.com>"]
repository = "https://github.com/brbtavares/tucano"
readme = "README.md"
description = "Ingestão WebSocket de alta performance e normalizada para venues financeiros (foco B3) - baterias incluídas."
keywords = ["trading", "backtesting", "crypto", "stocks", "investment"]
categories = ["finance", "algorithms"]
license = "MIT"

[dev-dependencies]
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
rust_decimal_macros = { workspace = true }

[dependencies]
# Tucano Ecosystem
"tucano-integration" = { workspace = true }
"tucano-markets" = { workspace = true }
tucano-macros = "0.2.0"

# Logging
tracing = { workspace = true }

# Async
tokio = { workspace = true, features = ["sync", "macros", "rt-multi-thread"] }
tokio-stream = { workspace = true, features = ["sync"] }
futures = { workspace = true }
futures-util = { workspace = true }
async-trait = { workspace = true }

# Protocol
url = { workspace = true }
reqwest = { workspace = true}

# Error
thiserror = { workspace = true }

# SerDe
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Data Structures
parking_lot = { workspace = true }
rust_decimal = { workspace = true, features = ["serde-with-str"] }
smol_str = { workspace = true, features = ["serde"] }

# Misc
chrono = { workspace = true, features = ["serde"] }
derive_more = { workspace = true }
itertools = { workspace = true }
vecmap-rs = { workspace = true }
fnv = { workspace = true }
