[package]
name = "toucan-data"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/brbtavares/toucan"
readme = "README.md"
documentation = "https://docs.rs/toucan-data"
description = "Normalized WebSocket ingestion of public data (focus B3)"
keywords = ["trading","marketdata","websocket","b3"]
categories = ["finance","api-bindings"]

[package.metadata.docs.rs]
all-features = true

[dev-dependencies]
rust_decimal_macros = { workspace = true }

[dependencies]
## Toucan Ecosystem
"toucan-integration" = { workspace = true }
"toucan-instrument" = { workspace = true }

## ProfitDLL
## Logging
tracing = { workspace = true }

## Async
tokio = { workspace = true, features = ["sync", "macros", "rt-multi-thread"] }
tokio-stream = { workspace = true, features = ["sync"] }
futures = { workspace = true }
futures-util = { workspace = true }
async-trait = { workspace = true }

## Protocol
url = { workspace = true }
reqwest = { workspace = true}

## Error
thiserror = { workspace = true }

## SerDe
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

## Data Structures
parking_lot = { workspace = true }
rust_decimal = { workspace = true, features = ["serde-with-str"] }
smol_str = { workspace = true, features = ["serde"] }

## Misc
chrono = { workspace = true, features = ["serde"] }
derive_more = { workspace = true }
itertools = { workspace = true }
vecmap-rs = { workspace = true }
fnv = { workspace = true }
