[package]
name = "tucano-examples"
version = "0.1.0"
edition = "2021"

[dependencies]
profitdll = { package = "tucano-profitdll", path = "../profitdll" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15"
rust_decimal = { workspace = true }

# Curadoria em andamento: exemplos antigos removidos.
# Novo pipeline: adicionaremos gradualmente exemplos "live" e "mock" com convenções padronizadas.

[[bin]]
name = "tucano-examples"
path = "src/main.rs"

[[bin]]
name = "mock_minimal"
path = "mock/minimal.rs"

[[bin]]
name = "live_login_single_ticker"
path = "live/live_login_single_ticker.rs"

