[package]
name = "tucano-examples"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"

[features]
default = []
# Proxy para habilitar a feature real_dll do dependency tucano-profitdll
real_dll = ["profitdll/real_dll"]

[dependencies]
profitdll = { package = "tucano-profitdll", path = "../profitdll" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15"
rust_decimal = { workspace = true }
chrono = { workspace = true }

# Curadoria em andamento: exemplos antigos removidos.
# Novo pipeline: adicionaremos gradualmente exemplos "live" e "mock" com convenções padronizadas.

[[bin]]
name = "tucano-examples"
path = "src/main.rs"

[[bin]]
name = "mock_minimal"
path = "mock/minimal.rs"

[[bin]]
name = "example_1_live_login"
path = "live/example_1_live_login.rs"

[[bin]]
name = "example_2_get_history_trades"
path = "live/example_2_get_history_trades.rs"

