[package]
name = "tucano-examples"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"

[features]
default = []
## Proxy to enable the real_dll feature of the tucano-profitdll dependency
real_dll = ["tucano-profitdll/real_dll"]

[dependencies]
"tucano-profitdll" = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15"
rust_decimal = { workspace = true }
chrono = { workspace = true }

## Curation in progress: old examples removed.
## New pipeline: we will gradually add "live" and "mock" examples with standardized conventions.

[[bin]]
name = "tucano-examples"
path = "src/main.rs"

[[bin]]
name = "mock_minimal"
path = "src/mock_minimal.rs"

[[bin]]
name = "example_1_live_login"
path = "src/example_1_live_login.rs"

[[bin]]
name = "example_2_get_history_trades"
path = "src/example_2_get_history_trades.rs"

