[package]
name = "execution"
version = "0.5.3"
edition = "2021"
authors = ["JustAStream <justastream.code@gmail.com>"]
repository = "https://github.com/brbtavares/tucano"
readme = "README.md"
description = "Stream private account data from financial venues, and execute (live or mock) orders."
keywords = ["trading", "backtesting", "crypto", "stocks", "investment"]
categories = ["accessibility", "simulation"]

[features]
# Habilita newtypes experimentais para indices/nomes (map.rs usa cfg(feature = "typed_indices")).
typed_indices = []


[dependencies]
# Tucano Ecosystem
data = { workspace = true }
integration = { workspace = true }
markets = { workspace = true }

# Logging
tracing = { workspace = true }

# Async
tokio = { workspace = true, features = ["sync", "macros", "rt-multi-thread"] }
tokio-stream = { workspace = true, features = ["sync"] }
futures = { workspace = true }

# Data Structures
smol_str = { workspace = true }
fnv = { workspace = true }
rust_decimal = { workspace = true }

# Error
thiserror = { workspace = true }

# SerDe
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Crypto for Binance signing (commented out for now)
# hex = "0.4"
# hmac = "0.12"
# sha2 = "0.10"

# HTTP client (commented out for now due to OpenSSL issues)
# reqwest = { version = "0.11", features = ["json"] }

# Misc
rand = { workspace = true }
chrono = { workspace = true, features = ["serde"]}
itertools = { workspace = true }
derive_more = { workspace = true, features = ["constructor", "from", "display"]}

[dev-dependencies]
rust_decimal_macros = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }

