[package]
name = "tucano-execution"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/brbtavares/tucano"
readme = "README.md"
documentation = "https://docs.rs/tucano-execution"
description = "Order & account data: execution (mock/live) and private streams"
keywords = ["trading","execution","orders","account"]
categories = ["finance","api-bindings"]

[package.metadata.docs.rs]
all-features = true

[features]
## Enables experimental newtypes for indices/names (map.rs uses cfg(feature = "typed_indices")).
typed_indices = []


[dependencies]
## Tucano Ecosystem
"tucano-data" = { workspace = true }
"tucano-integration" = { workspace = true }
"tucano-instrument" = { workspace = true }
## Logging
tracing = { workspace = true }

## Async
tokio = { workspace = true, features = ["sync", "macros", "rt-multi-thread"] }
tokio-stream = { workspace = true, features = ["sync"] }
futures = { workspace = true }

## Data Structures
smol_str = { workspace = true }
fnv = { workspace = true }
rust_decimal = { workspace = true }

## Error
thiserror = { workspace = true }

## SerDe
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

## Crypto for Binance signing (commented out for now)
# hex = "0.4"
# hmac = "0.12"
# sha2 = "0.10"

## HTTP client (commented out for now due to OpenSSL issues)
# reqwest = { version = "0.11", features = ["json"] }

## Misc
rand = { workspace = true }
chrono = { workspace = true, features = ["serde"]}
itertools = { workspace = true }
derive_more = { workspace = true, features = ["constructor", "from", "display"]}
tucano_exchanges = { path = "../exchanges" }

[dev-dependencies]
rust_decimal_macros = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }

