[package]
name = "tucano-integration"
version = "0.9.1"
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/brbtavares/tucano"
readme = "README.md"
documentation = "https://docs.rs/tucano-integration"
description = "Framework de integrações Web (HTTP/WebSocket) para venues/exchanges"
keywords = ["trading","integration","http","websocket"]
categories = ["finance","api-bindings"]

[package.metadata.docs.rs]
all-features = true

[dev-dependencies]
tokio-test = { workspace = true }

[dependencies]
# Tucano Ecosystem
"tucano-markets" = { workspace = true }

# Logging
tracing = { workspace = true }

# SerDe
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_qs = { workspace = true }
serde_urlencoded = { workspace = true }

# Error
thiserror = { workspace = true }

# Async
tokio = { workspace = true, features = [
    "net",
    "sync",
    "macros",
    "rt-multi-thread",
] }
tokio-stream = { workspace = true }
futures = { workspace = true }
pin-project = { workspace = true }

# Data Structures
indexmap = { workspace = true }
fnv = { workspace = true }
smol_str = { workspace = true, features = ["serde"]}

# Protocol
tokio-tungstenite = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }

# Cryptographic Signatures
hmac = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }

# Misc
chrono = { workspace = true, features = ["serde"] }
itertools = { workspace = true }
bytes = { workspace = true }
derive_more = { workspace = true, features = ["display", "constructor"] }
