[package]
name = "tucano-macros"
version = "0.2.0"
authors = ["JustAStream"]
edition = "2021"
repository = "https://github.com/brbtavares/tucano"
description = "Macros do ecossistema Tucano"
keywords = ["trading", "backtesting", "crypto", "stocks", "investment"]
categories = ["accessibility", "simulation"]
license = "MIT"

[package.metadata.docs.rs]
all-features = true

[lib]
proc-macro = true

[dependencies]
# Macro
proc-macro2 = "1.0.49"
syn = "2.0.104"
quote = "1.0.23"

# Misc
convert_case = "0.8.0"
