[package]
name = "tucano-macros"
	version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/brbtavares/tucano"
readme = "README.md"
documentation = "https://docs.rs/tucano-macros"
description = "Procedural macros supporting the Tucano ecosystem"
keywords = ["trading","macros","proc-macro"]
categories = ["development-tools","finance"]

[package.metadata.docs.rs]
all-features = true

[lib]
proc-macro = true

[dependencies]
# Macro
proc-macro2 = "1.0.49"
syn = "2.0.104"
quote = "1.0.23"

# Misc
convert_case = "0.8.0"
