[package]
name = "tucano-markets"
version = "0.3.1"
edition = "2021"
authors = ["JustAStream <justastream.code@gmail.com>"]
repository = "https://github.com/brbtavares/tucano"
readme = "README.md"
description = "Estruturas centrais de Exchange, Instrument e Asset do Tucano e utilidades associadas."
keywords = ["trading", "backtesting", "crypto", "stocks", "investment"]
categories = ["accessibility", "simulation"]

[features]
default = []
real_dll = []  # Feature para usar DLL real em Windows

[target.'cfg(windows)'.dependencies]
# Windows-specific dependencies for ProfitDLL integration
winapi = { version = "0.3", features = ["libloaderapi", "processthreadsapi"] }

[dev-dependencies]
rust_decimal_macros = { workspace = true }
serde_json = { workspace = true }

[dependencies]
# SerDe
serde = { workspace = true, features = ["derive"] }

# Async
async-trait = { workspace = true }
tokio = { workspace = true, features = ["sync"] }

# Error handling
thiserror = { workspace = true }

# Data types
rust_decimal = { workspace = true }
chrono = { workspace = true }

# Misc
derive_more = { workspace = true, features = ["display"] }
