[package]
name = "tucano-markets"
version = "0.4.0"
edition = "2021"
authors = ["JustAStream <justastream.code@gmail.com>"]
repository = "https://github.com/brbtavares/tucano"
readme = "README.md"
description = "Estruturas centrais de Exchange, Instrument e Asset do Tucano e utilidades associadas."
keywords = ["trading", "backtesting", "crypto", "stocks", "investment"]
categories = ["finance", "algorithms"]
license = "MIT"

[package.metadata.docs.rs]
all-features = true

[features]
default = []

[target.'cfg(windows)'.dependencies]
# Windows-specific dependencies for ProfitDLL integration
winapi = { version = "0.3", features = ["libloaderapi", "processthreadsapi"] }

#[dev-dependencies]
# (none currently)

[dependencies]
# SerDe
serde = { workspace = true, features = ["derive"] }

# Async (used by broker traits)
async-trait = { workspace = true }


# Error handling
thiserror = { workspace = true }

# Data types
rust_decimal = { workspace = true }
chrono = { workspace = true }

# Misc
derive_more = { workspace = true, features = ["display"] }
