[package]
name = "profit-dll"
version = "0.1.0"
edition = "2021"
description = "Rust wrapper for ProfitDLL - Brazilian trading system integration"
license = "MIT"

[dependencies]
# Direct dependencies 
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
thiserror = "1.0"
tokio = { version = "1.0", optional = true, features = ["full"] }
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust_decimal = "1.32"
smol_str = { version = "0.2", features = ["serde"] }
derive_more = { version = "1.0", features = ["constructor", "display", "from"] }
once_cell = "1.19"

# Windows-specific dependencies
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["windef", "winnt", "libloaderapi", "winerror", "minwindef", "processthreadsapi"] }
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_SystemServices"
] }

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = "0.3"

[features]
default = ["async"]
async = ["tokio"]
