[package]
name = "profitdll"
version = "0.1.1"
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/brbtavares/tucano"
readme = "README.md"
documentation = "https://docs.rs/profitdll"
description = "Integração ProfitDLL (tipos + FFI opcional Windows / mock) para o ecossistema Tucano"
keywords = ["trading","b3","dll","profit","marketdata"]
categories = ["finance","api-bindings"]

[features]
default = []
real_dll = []

[dependencies]
chrono = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
once_cell = { workspace = true }
libloading = "0.8"
async-trait = "0.1"

 
