[package]
name = "tucano-risk"
version = "0.1.0"
edition = "2021"
license = "MIT"

[package.metadata.docs.rs]
all-features = true
repository = "https://github.com/brbtavares/tucano"
description = "Interfaces e implementações de gestão de risco para o ecossistema Tucano"
keywords = ["trading","risk","risk-management","finance"]
categories = ["finance","algorithms"]

[dependencies]
"tucano-execution" = "0.5.3"
"tucano-markets" = "0.3.1"
serde = { version = "1", features = ["derive"] }
rust_decimal = { version = "1", features = ["serde"] }
derive_more = { version = "1", features = ["constructor", "display", "from"] }
thiserror = "2"
