[package]
name = "tucano-strategies"
version = "0.1.0"
edition = "2021"
authors = ["JustAStream <justastream.code@gmail.com>"]
repository = "https://github.com/brbtavares/tucano"
readme = "README.md"
description = "Coleção de estratégias concretas para o ecossistema Tucano"
keywords = ["trading", "strategies", "algo"]
categories = ["algorithms", "finance"]
license = "MIT"

[features]
default = []
momentum = []
mean_rev = []
microstructure = []
options = []

[dependencies]
"tucano-trader" = { path = "../trader" }
"tucano-execution" = { workspace = true }
"tucano-markets" = { workspace = true }
"tucano-analytics" = { workspace = true, optional = true }
chrono = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
rust_decimal = { workspace = true }

[package.metadata.docs.rs]
all-features = true
