[package]
name = "tucano-strategies"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/brbtavares/tucano"
readme = "README.md"
documentation = "https://docs.rs/tucano-strategies"
description = "Estratégias de exemplo (placeholders) para o ecossistema Tucano"
keywords = ["trading","strategies","algo"]
categories = ["finance","algorithms"]

[features]
default = []
momentum = []
mean_rev = []
microstructure = []
options = []

[dependencies]
"tucano-trader" = { workspace = true }
"tucano-execution" = { workspace = true }
"tucano-markets" = { workspace = true }
"tucano-analytics" = { workspace = true, optional = true }
chrono = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
rust_decimal = { workspace = true }

[package.metadata.docs.rs]
all-features = true
