[package]
name = "strategy"
version = "0.1.0"
edition = "2021"
authors = ["JustAStream <justastream.code@gmail.com>"]
repository = "https://github.com/brbtavares/toucan"
readme = "README.md"
description = "Strategy interfaces and implementations for the Toucan trading ecosystem"
keywords = ["trading", "strategies", "algo", "crypto", "investment"]
categories = ["algorithms", "finance"]

[dependencies]
# Toucan Ecosystem
execution = { workspace = true }
markets = { workspace = true }

# Data Structures
rust_decimal = { workspace = true }

# Error
thiserror = { workspace = true }

# SerDe
serde = { workspace = true, features = ["derive"] }

# Misc
chrono = { workspace = true, features = ["serde"] }
derive_more = { workspace = true, features = ["constructor", "display", "from"] }
smol_str = { workspace = true }

# Logging
tracing = { workspace = true }
itertools = { workspace = true }
