[package]
name = "tucano-trader"
version = "0.1.0"
edition = "2021"
authors = ["JustAStream <justastream.code@gmail.com>"]
repository = "https://github.com/brbtavares/tucano"
readme = "README.md"
description = "Abstrações centrais de estratégia (traits, tipos) para o ecossistema de trading Tucano"
keywords = ["trading", "strategies", "algo", "framework"]
categories = ["algorithms", "finance"]
license = "MIT"

[package.metadata.docs.rs]
all-features = true

[dependencies]
# Tucano Ecosystem
"tucano-execution" = "0.5.3"
"tucano-markets" = "0.3.1"

# Data Structures
rust_decimal = { workspace = true }

# Error
thiserror = { workspace = true }

# SerDe
serde = { workspace = true, features = ["derive"] }

# Misc
chrono = { workspace = true, features = ["serde"] }
derive_more = { workspace = true, features = ["constructor", "display", "from"] }
smol_str = { workspace = true }

# Logging
tracing = { workspace = true }
itertools = { workspace = true }
