[package]
name = "tucano-trader"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/brbtavares/tucano"
readme = "README.md"
documentation = "https://docs.rs/tucano-trader"
description = "Core abstractions for strategies (traits and types)"
keywords = ["trading","strategy","framework"]
categories = ["finance","algorithms"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
# Tucano Ecosystem
"tucano-execution" = { workspace = true }
"tucano-instrument" = { workspace = true }

# Data Structures
rust_decimal = { workspace = true }

# Error
thiserror = { workspace = true }

# SerDe
serde = { workspace = true, features = ["derive"] }

# Misc
chrono = { workspace = true, features = ["serde"] }
derive_more = { workspace = true, features = ["constructor", "display", "from"] }
smol_str = { workspace = true }

# Logging
tracing = { workspace = true }
itertools = { workspace = true }
